[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Machines_and_Triggers/Machines/LaserBeam.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/machines/glowing_circle.png" type="Texture" id=2]


[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.508772, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0630226 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 134.33
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 55.75
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 64.48
angular_velocity_random = 0.34
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 100.0
radial_accel_random = 1.0
scale = 0.1

[node name="LaserBeam" type="RayCast2D"]
position = Vector2( 69, 69 )
scale = Vector2( 0.994445, -2.87214 )
cast_to = Vector2( 150, 0 )
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 101, 0 )
width = 2.0
default_color = Color( 0.32549, 0.729412, 1, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles" type="Particles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.1
speed_scale = 0.1
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="CollisionParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="BeamParticles" type="Particles2D" parent="."]
emitting = false
amount = 6
lifetime = 0.2
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 2 )
